
OSG News (most significant items from ChangeLog)
================================================

July 2002 - OpenSceneGraph-0.9.0.tar.gz

    >>> OpenSceneGraph goes beta - Multitexturing, Occlusion Culling, Particles and much more added!

    This release marks the beginning of the beta phase of the OpenSceneGraph
    development, which means that all the major core features are now
    in the scene graph, and 1.0 is not far away.  Its performance, features 
    and portability already compares very favorably to other scene graphs, 
    both comerical and open source.  

    Multi-texturing support added to osg::StateSet, osg::Geometry, osg::State
    and txp loader, so multi-texturing can now be done with very little coding
    from the user - all you need to do is specify the texture unit to use 
    when setting texturing state and texture coordinates and the rest is 
    handled automatically by the scene graph!
    
    The new osg::Geometry classes which supersedes the old Performer style 
    osg::GeoSet, support multi-texturing, and uses sharable osg::Arrays which
    utilize std::vector<> for data storage and manipulation.

    Shadow volume occlusion culling adding to the core OSG, developed as a
    collobaration between Mike Connell and Robert Osfield. Our implementation
    uses convex planer occluders, with support for holes to allow larger
    and more effective occluders to be used. The approach is software 
    based so it 100% portable, and by culling during the cull traversal 
    both CPU and GPU loads are significantly reduced, making it an extremely 
    powerful feature for large scale urban and indoor visulisation. 

    osgParticle developed by Marco Jez adds support for a range of particle
    effects such smoke, fires, engine plumes, fountains, fire works, and
    is fully customizable to produce your own favorite effects. osgParticle 
    is a NodeKit (see below) which can be directly linked to in your 