@@ -119,11 +119,11 @@ class SG_EXPORT TexEnvCombine : public StateAttribute
             SUBTRACT        = GL_SUBTRACT_ARB
         };
 
-        void setCombineRGB(GLint cm) { _combine_RGB = cm; }
-        void setCombineAlpha(GLint cm) { _combine_Alpha = cm; }
+        void setCombine_RGB(GLint cm) { _combine_RGB = cm; }
+        void setCombine_Alpha(GLint cm) { _combine_Alpha = cm; }
 
-        GLint getCombineRGB() const { return _combine_RGB; }
-        GLint getCombineAlpha() const { return _combine_Alpha; }
+        GLint getCombine_RGB() const { return _combine_RGB; }
+        GLint getCombine_Alpha() const { return _combine_Alpha; }
         
         enum SourceParam
         {
@@ -131,14 +131,14 @@ class SG_EXPORT TexEnvCombine : public StateAttribute
             PRIMARY_COLOR   = GL_PRIMARY_COLOR_ARB,
             PREVIOUS        = GL_PREVIOUS_ARB,
             TEXTURE         = GL_TEXTURE,
-            TEXTURE_0       = GL_TEXTURE0,
-            TEXTURE_1       = GL_TEXTURE0+1,
-            TEXTURE_2       = GL_TEXTURE0+2,
-            TEXTURE_3       = GL_TEXTURE0+3,
-            TEXTURE_4       = GL_TEXTURE0+4,
-            TEXTURE_5       = GL_TEXTURE0+5,
-            TEXTURE_6       = GL_TEXTURE0+6,
-            TEXTURE_7       = GL_TEXTURE0+7
+            TEXTURE0        = GL_TEXTURE0,
+            TEXTURE1        = GL_TEXTURE0+1,
+            TEXTURE2        = GL_TEXTURE0+2,
+            TEXTURE3        = GL_TEXTURE0+3,
+            TEXTURE4        = GL_TEXTURE0+4,
+            TEXTURE5        = GL_TEXTURE0+5,
+            TEXTURE6        = GL_TEXTURE0+6,
+            TEXTURE7        = GL_TEXTURE0+7
         };
         
         void setSource0_RGB(GLint sp) { _source0_RGB = sp; computeNeedoForTexEnvCombiners(); }
